--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,14 @@ header h1 {
   display: block;
   margin: 0 auto;
 }
+.carousel img {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: opacity 0.4s ease;
+}
+
 
 
 .main {
